2009-12-25  Matevz Tadel  <matevz.tadel@ijs.si>

	Fixes for OSX build.

	* Pupils/Pupil.cxx:
	ifdef __APPLE__ was badly mis-spelled.

2009-12-22  Matevz Tadel  <matevz.tadel@ijs.si>

	Sanitize GL variable holder/switch classes.

	* Rnr/GL/ZGlass_GL_Rnr.h:
	Add GL_Int_Holder and GL_Enum_Holder.
	Move all the holder/switch classes out of ZGlass_GL_Rnr class.

2009-12-22  Matevz Tadel  <matevz.tadel@ijs.si>

	Run Gled termination in a dedicated thread.

	* Ephra/Saturn.cxx:
	* Ephra/Saturn.h:
	Protect against Shotdown() being called twice.
	Initialize most members in constructor.
	White-space.

	* Gled/Gled.cxx:
	* Gled/Gled.h:
	* GledView/GledGUI.cxx:
	* GledView/GledGUI.h:
	When Exit() is called, spawn a dedicated thread that calls
	virtual ExitVirtual().

	* Glasses/WGlButton.h:
	Tag ExitGled() as local.

2009-12-20  Matevz Tadel  <matevz.tadel@ijs.si>

	* Glasses/ZGlass.cxx:
	Add handling of MC_IsDetached bit to suggest_MIR_presence().

2009-12-17  Matevz Tadel  <matevz.tadel@ijs.si>

	* Stones/ZColor.cxx:
	* Stones/ZColor.h:
	* Stones/ZColorMark.cxx:
	* Stones/ZColorMark.h:
	Use ClassDefNV (non-virtual) to reduce memory size.
	Add some docs.
	White-space changes.

2009-12-16  Matevz Tadel  <matevz.tadel@ijs.si>

	* Pupils/Pupil.cxx:
	Forgot to call valid(1) in handling of PRQN_redraw.
	Move handling of basic events (enter/leave/show/hide) to the top.

2009-12-16  Matevz Tadel  <matevz.tadel@ijs.si>

	* Glasses/ZQueen.cxx:
	Change order of lens disentanglement in put_lens_to_purgatory() -
	first remove references to lens and later references from the lens
	that is being redeemed.

	* Rnr/GL/WGlValuator_GL_Rnr.cxx:
	Always check if link to alpha lens is set.

	* Rnr/GL/ZGlass_GL_Rnr.h:
	Add defines for obtaining values of links that can be potentially
	zero.

2009-12-16  Matevz Tadel  <matevz.tadel@ijs.si>

	* RnrBase/PMSEntry.cxx:
	* RnrBase/PMSEntry.h:
	Add some docs. White-space.

2009-12-13  Matevz Tadel  <matevz.tadel@ijs.si>

	* Pupils/Pupil.cxx: